price_component_analysis: moved functions to utils

--- a/nb/price_component_analysis.ipynb
+++ b/nb/price_component_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "id": "b24ab94a",
    "metadata": {},
    "outputs": [
@@ -18,8 +18,6 @@
     "import os, sys\n",
     "\n",
     "import kaggle\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.linear_model import Lasso\n",
@@ -30,7 +28,6 @@
     "from sklearn.pipeline import Pipeline\n",
     "from statsmodels.graphics.tsaplots import plot_pacf\n",
     "from statsmodels.tsa.deterministic import DeterministicProcess, CalendarFourier\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "\n",
     "rootpath = os.path.dirname(os.getcwd())\n",
     "\n",
@@ -47,97 +44,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "786fca87",
-   "metadata": {},
-   "source": [
-    "## Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "5758570a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_ticker(df_clean, ticker, requiredrecords=500, datapath=None, write=False,):\n",
-    "    if type(ticker) is not str:\n",
-    "        raise TypeError('ticker must be a string')\n",
-    "    print(f'Extracting for ticker: {ticker}')\n",
-    "    df_clean_sample = df_clean[\n",
-    "        (df_clean['Ticker'].isin([ticker])) #& \n",
-    "        # (df_clean['Date'] >= date(2025, 1, 1))\n",
-    "        ].copy()\n",
-    "    # set date as index\n",
-    "    df_clean_sample.set_index('Date', inplace=True)\n",
-    "    # df_clean_sample = df_clean_sample.resample('D').mean()\n",
-    "    df_clean_sample.index = df_clean_sample.index.normalize()\n",
-    "    # drop unnecessary coluns\n",
-    "    df_clean_sample.drop(columns=['Ticker'], inplace=True)\n",
-    "    # drop rows with nans\n",
-    "    df_clean_sample = df_clean_sample.dropna()\n",
-    "    df_clean_sample = df_clean_sample.sort_values('Date', ascending=False)\n",
-    "    # take only the requested number of records from the latest period\n",
-    "    df_clean_sample = df_clean_sample.head(requiredrecords)\n",
-    "    print(f'Extracted sample shape: {df_clean_sample.shape}')\n",
-    "    \n",
-    "    if write:\n",
-    "        clean_sample_fpath_full = os.path.join(datapath, f'clean_sample_{ticker}.csv')\n",
-    "        df_clean_sample.to_csv(clean_sample_fpath_full, index=False)\n",
-    "        print(f'Wrote sample to: {clean_sample_fpath_full}')\n",
-    "    return df_clean_sample\n",
-    "\n",
-    "def plot_seasonal_composition(df, feature):\n",
-    "    df=df.copy()\n",
-    "    if df.index[-1]<df.index[0]:\n",
-    "        #flip upside down\n",
-    "        df=df.iloc[::-1]\n",
-    "    decomposition = seasonal_decompose(\n",
-    "        df[feature], # .asfreq('D'),\n",
-    "        model='additive',\n",
-    "        period=5\n",
-    "        )\n",
-    "    fig = decomposition.plot()\n",
-    "    fig.set_size_inches(15, 10)\n",
-    "    # plt.show()\n",
-    "    # plt.title(feature)\n",
-    "\n",
-    "def plot_periodogram(ts, detrend='linear', ax=None):\n",
-    "    from scipy.signal import periodogram\n",
-    "    fs = pd.Timedelta(\"365D\") / pd.Timedelta(\"1D\")\n",
-    "    freqencies, spectrum = periodogram(\n",
-    "        ts,\n",
-    "        fs=fs,\n",
-    "        detrend=detrend,\n",
-    "        window=\"boxcar\",\n",
-    "        scaling='spectrum',\n",
-    "    )\n",
-    "    if ax is None:\n",
-    "        _, ax = plt.subplots()\n",
-    "    ax.step(freqencies, spectrum, color=\"purple\")\n",
-    "    ax.set_xscale(\"log\")\n",
-    "    ax.set_xticks([1, 2, 4, 6, 12, 26, 52, 104])\n",
-    "    ax.set_xticklabels(\n",
-    "        [\n",
-    "            \"Annual (1)\",\n",
-    "            \"Semiannual (2)\",\n",
-    "            \"Quarterly (4)\",\n",
-    "            \"Bimonthly (6)\",\n",
-    "            \"Monthly (12)\",\n",
-    "            \"Biweekly (26)\",\n",
-    "            \"Weekly (52)\",\n",
-    "            \"Semiweekly (104)\",\n",
-    "        ],\n",
-    "        rotation=30,\n",
-    "    )\n",
-    "    ax.ticklabel_format(axis=\"y\", style=\"sci\", scilimits=(0, 0))\n",
-    "    ax.set_ylabel(\"Variance\")\n",
-    "    ax.set_title(\"Periodogram\")\n",
-    "    return ax"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "fcbebb5f",
    "metadata": {},
    "source": [
@@ -146,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "81c54c63",
    "metadata": {},
    "outputs": [
@@ -171,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "0d142502",
    "metadata": {},
    "outputs": [
@@ -257,7 +163,7 @@
          "type": "float"
         }
        ],
-       "ref": "6c622263-4914-4b50-be48-4386b02700d7",
+       "ref": "a3255fa9-ffcf-48ca-ab14-fdc94e0b52f1",
        "rows": [
         [
          "0",
@@ -487,7 +393,7 @@
        "4           0.0            NaN  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "0fb8c68a",
    "metadata": {},
    "outputs": [
@@ -582,7 +488,7 @@
          "type": "float"
         }
        ],
-       "ref": "47a60ce4-22bf-4a3f-9cae-a5697fe3993e",
+       "ref": "f8d689a7-e7d0-4eac-9f12-be2fc7446f2e",
        "rows": [
         [
          "0",
@@ -812,7 +718,7 @@
        "4           0.0            NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "a48796a5",
    "metadata": {},
    "outputs": [
@@ -872,7 +778,7 @@
          "type": "string"
         }
        ],
-       "ref": "64d020e2-e155-45b3-97f0-2e109e864717",
+       "ref": "274adae1-3dc3-40ad-a412-45a4bf62985a",
        "rows": [
         [
          "0",
@@ -1029,7 +935,7 @@
        "4  34697317.0   AAPL  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "8d7aa948",
    "metadata": {},
    "outputs": [
@@ -1087,7 +993,7 @@
          "type": "float"
         }
        ],
-       "ref": "243934eb-156e-46fb-8b99-17ebc5e84ff7",
+       "ref": "7d79f8da-d938-482a-b035-cfb4ac62aa57",
        "rows": [
         [
          "2025-07-03 00:00:00",
@@ -1287,14 +1193,14 @@
        "2025-06-20  201.000000    0.013922    0.024287  1.914649e+10"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load data and compute base features\n",
-    "df = extract_ticker(df_clean, 'AAPL', requiredrecords=500, write=False) # datapath=datapath\n",
+    "df = utils.extract_ticker(df_clean, 'AAPL', requiredrecords=500, write=False) # datapath=datapath\n",
     "df['rel_return'] = (df['Close'] - df['Open']) / df['Open']\n",
     "df['volatility'] = (df['High'] - df['Low']) / ((df['High'] + df['Low']) / 2)\n",
     "df['dollar_vol'] = df['Volume'] * ((df['Open'] + df['Close']) / 2)\n",
@@ -1312,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "e5db3571",
    "metadata": {},
    "outputs": [
@@ -1329,12 +1235,12 @@
    ],
    "source": [
     "# Seasonal decomposition\n",
-    "plot_seasonal_composition(df, 'Close')"
+    "utils.plot_seasonal_composition(df, 'Close')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "2b80aa44",
    "metadata": {},
    "outputs": [
@@ -1344,7 +1250,7 @@
        "<Axes: title={'center': 'Periodogram'}, ylabel='Variance'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1360,7 +1266,7 @@
     }
    ],
    "source": [
-    "plot_periodogram(df['Close'], detrend='linear')"
+    "utils.plot_periodogram(df['Close'], detrend='linear')"
    ]
   },
   {
@@ -1373,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "id": "7e799bcd",
    "metadata": {},
    "outputs": [],
@@ -1395,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "id": "ad50ff2a",
    "metadata": {},
    "outputs": [
@@ -1405,7 +1311,7 @@
        "<Axes: xlabel='Date'>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1427,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "id": "eab719ee",
    "metadata": {},
    "outputs": [
@@ -1437,7 +1343,7 @@
        "<Axes: xlabel='Date'>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1459,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "id": "db72aca5",
    "metadata": {},
    "outputs": [
@@ -1469,7 +1375,7 @@
        "<Axes: title={'center': 'Periodogram'}, ylabel='Variance'>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1485,7 +1391,7 @@
     }
    ],
    "source": [
-    "plot_periodogram(y_detrended, detrend='constant')"
+    "utils.plot_periodogram(y_detrended, detrend='constant')"
    ]
   },
   {
@@ -1498,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "id": "b99e68bb",
    "metadata": {},
    "outputs": [],
@@ -1532,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 15,
    "id": "5dc48514",
    "metadata": {},
    "outputs": [
@@ -1542,7 +1448,7 @@
        "<Axes: xlabel='Date'>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1564,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "id": "611cdcf6",
    "metadata": {},
    "outputs": [
@@ -1574,7 +1480,7 @@
        "<Axes: xlabel='Date'>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1596,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 17,
    "id": "e9083699",
    "metadata": {},
    "outputs": [
@@ -1606,7 +1512,7 @@
        "<Axes: title={'center': 'Periodogram'}, ylabel='Variance'>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1622,7 +1528,7 @@
     }
    ],
    "source": [
-    "plot_periodogram(y_detrended_deseasoned, detrend='constant')"
+    "utils.plot_periodogram(y_detrended_deseasoned, detrend='constant')"
    ]
   },
   {
@@ -1635,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 18,
    "id": "8e6d714c",
    "metadata": {},
    "outputs": [
@@ -1656,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "id": "23028298",
    "metadata": {},
    "outputs": [
@@ -1677,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 20,
    "id": "c7e93d19",
    "metadata": {},
    "outputs": [
@@ -1685,7 +1591,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new X.shape =(499, 14), old y.shape=(499,)\n",
+      "new X.shape =(499, 14), old y.shape=(500,)\n",
       "new X.shape =(499, 14), new y.shape=(499,)\n"
      ]
     }
@@ -1702,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "id": "cf60e6fe",
    "metadata": {},
    "outputs": [
@@ -1719,7 +1625,7 @@
        "<Axes: xlabel='Date'>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1748,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 22,
    "id": "16bba420",
    "metadata": {},
    "outputs": [
@@ -1758,7 +1664,7 @@
        "<Axes: title={'center': 'Periodogram'}, ylabel='Variance'>"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1786,7 +1692,7 @@
    "source": [
     "y_resid_time_lags = y - y_pred_time_lags\n",
     "y_resid_time_lags.plot()\n",
-    "plot_periodogram(y_resid_time_lags, detrend='constant')"
+    "utils.plot_periodogram(y_resid_time_lags, detrend='constant')"
    ]
   },
   {
@@ -1799,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 23,
    "id": "c252b8b0",
    "metadata": {},
    "outputs": [
@@ -1823,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 24,
    "id": "42e64f06",
    "metadata": {},
    "outputs": [
@@ -1840,7 +1746,7 @@
        "<Axes: xlabel='Date'>"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1869,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 25,
    "id": "05f32fa8",
    "metadata": {},
    "outputs": [
@@ -1879,7 +1785,7 @@
        "<Axes: title={'center': 'Periodogram'}, ylabel='Variance'>"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1907,7 +1813,7 @@
    "source": [
     "y_resid_all = y - y_all\n",
     "y_resid_all.plot()\n",
-    "plot_periodogram(y_resid_all, detrend='constant')"
+    "utils.plot_periodogram(y_resid_all, detrend='constant')"
    ]
   },
   {
@@ -1920,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 26,
    "id": "d7a2e314",
    "metadata": {},
    "outputs": [],
