--- a/nb/price_component_analysis.ipynb
+++ b/nb/price_component_analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "98c0f7c2",
+   "metadata": {},
+   "source": [
+    "# world-stock-prices-daily-updating"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b24ab94a",
@@ -1579,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "8439618b",
    "metadata": {},
    "outputs": [
@@ -1606,7 +1614,9 @@
    ],
    "source": [
     "\n",
-    "df_raw = load_raw_data(rootpath = os.path.dirname(os.getcwd()))\n",
+    "df_raw = load_raw_data(\n",
+    "    rootpath = os.path.dirname(os.getcwd()),\n",
+    "    datasetname='world-stock-prices-daily-updating')\n",
     "df_clean = clean_raw_data(df_raw)\n",
     "ticker = 'AAPL'\n",
     "df_clean_ticker = extract_ticker(df_clean, ticker, requiredrecords=500, write=False) # datapath=datapat\n",
@@ -1769,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "8e171e3e",
    "metadata": {},
    "outputs": [
@@ -1807,7 +1817,9 @@
     }
    ],
    "source": [
-    "df_raw = load_raw_data(rootpath = os.path.dirname(os.getcwd()))\n",
+    "df_raw = load_raw_data(\n",
+    "    rootpath = os.path.dirname(os.getcwd()),\n",
+    "    datasetname='world-stock-prices-daily-updating')\n",
     "df_clean = clean_raw_data(df_raw)\n",
     "\n",
     "def ticker_pipeline(df_clean, ticker='AAPL'):\n",
@@ -1836,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "ca00c111",
    "metadata": {},
    "outputs": [
@@ -1874,7 +1886,9 @@
     }
    ],
    "source": [
-    "df_raw = load_raw_data(rootpath = os.path.dirname(os.getcwd()))\n",
+    "df_raw = load_raw_data(\n",
+    "    rootpath = os.path.dirname(os.getcwd()),\n",
+    "    datasetname='world-stock-prices-daily-updating')\n",
     "df_clean = clean_raw_data(df_raw)\n",
     "\n",
     "def ticker_pipeline(df_clean, ticker='AAPL'):\n",
