data.load_raw_data now accepts user, adapted the  nbs

--- a/nb/world-stock-prices-daily-updating/exponential_smoothing.ipynb
+++ b/nb/world-stock-prices-daily-updating/exponential_smoothing.ipynb
@@ -38,6 +38,7 @@
      "output_type": "stream",
      "text": [
       "rootpath: /home/onur/WORK/DS/repos/TimeSeries/stocks_forecasting\n",
+      "Raw data already found in location /home/onur/WORK/DS/repos/TimeSeries/stocks_forecasting/data\n",
       "reading raw data from: /home/onur/WORK/DS/repos/TimeSeries/stocks_forecasting/data/world-stock-prices-daily-updating/World-Stock-Prices-Dataset.csv\n",
       "Extracting for ticker: AAPL\n",
       "Extracted sample shape: (100, 5)\n"
@@ -46,7 +47,8 @@
    ],
    "source": [
     "df_raw = load_raw_data(\n",
-    "    rootpath = os.path.dirname(os.getcwd()),\n",
+    "    rootpath = os.path.dirname(os.path.dirname(os.getcwd())),\n",
+    "    user='nelgiriyewithana',\n",
     "    datasetname='world-stock-prices-daily-updating')\n",
     "df_clean = clean_raw_data(df_raw)\n",
     "ticker = 'AAPL'\n",
