--- a/nb/world-stock-prices-daily-updating/price_component_analysis.ipynb
+++ b/nb/world-stock-prices-daily-updating/price_component_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b24ab94a",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
     "from statsmodels.graphics.tsaplots import plot_pacf\n",
     "from statsmodels.tsa.deterministic import DeterministicProcess, CalendarFourier\n",
     "\n",
-    "rootpath = os.path.dirname(os.getcwd())\n",
+    "rootpath = os.path.dirname(os.path.dirname(os.getcwd()))\n",
     "\n",
     "module_path = os.path.abspath(os.path.join(rootpath, 'src'))\n",
     "sys.path.insert(0, module_path)\n",
@@ -46,6 +46,7 @@
     "import data\n",
     "\n",
     "print(f'rootpath: {rootpath}')\n",
+    "user = 'nelgiriyewithana'\n",
     "datasetname = 'world-stock-prices-daily-updating'\n",
     "datapath = os.path.join(rootpath, 'data')\n"
    ]
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "81c54c63",
    "metadata": {},
    "outputs": [
@@ -147,7 +148,7 @@
          "type": "float"
         }
        ],
-       "ref": "14f6f2f1-b141-400d-b185-fdbf91217d09",
+       "ref": "d6d009cf-bfa0-48ef-a1c0-495e7b551cb6",
        "rows": [
         [
          "0",
@@ -377,7 +378,7 @@
        "4           0.0            NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +387,7 @@
     "os.makedirs(datapath, exist_ok=True)\n",
     "if not os.path.exists(os.path.join(datapath, datasetname)):\n",
     "    kaggle.api.dataset_download_files(\n",
-    "        dataset=f'nelgiriyewithana/{datasetname}',\n",
+    "        dataset=f'{user}/{datasetname}',\n",
     "        path=datapath,\n",
     "        unzip=True)\n",
     "else:\n",
@@ -1499,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "eeae0a19",
    "metadata": {},
    "outputs": [],
@@ -1615,7 +1616,8 @@
    "source": [
     "\n",
     "df_raw = load_raw_data(\n",
-    "    rootpath = os.path.dirname(os.getcwd()),\n",
+    "    rootpath=os.path.dirname(os.getcwd()),\n",
+    "    user='nelgiriyewithana',\n",
     "    datasetname='world-stock-prices-daily-updating')\n",
     "df_clean = clean_raw_data(df_raw)\n",
     "ticker = 'AAPL'\n",
@@ -1818,7 +1820,8 @@
    ],
    "source": [
     "df_raw = load_raw_data(\n",
-    "    rootpath = os.path.dirname(os.getcwd()),\n",
+    "    rootpath=os.path.dirname(os.getcwd()),\n",
+    "    user='nelgiriyewithana',\n",
     "    datasetname='world-stock-prices-daily-updating')\n",
     "df_clean = clean_raw_data(df_raw)\n",
     "\n",
@@ -1887,7 +1890,8 @@
    ],
    "source": [
     "df_raw = load_raw_data(\n",
-    "    rootpath = os.path.dirname(os.getcwd()),\n",
+    "    rootpath=os.path.dirname(os.getcwd()),\n",
+    "    user='nelgiriyewithana',\n",
     "    datasetname='world-stock-prices-daily-updating')\n",
     "df_clean = clean_raw_data(df_raw)\n",
     "\n",
