refactored raw data downloading function into stock-price-prediction-challenge

--- a/nb/stock-price-prediction-challenge/EDA_Feature_Engineering.ipynb
+++ b/nb/stock-price-prediction-challenge/EDA_Feature_Engineering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "d3602e01",
    "metadata": {},
    "outputs": [
@@ -35,55 +35,14 @@
     "LOCAL = True\n",
     "rootpath = os.path.dirname(os.path.dirname(os.getcwd()))\n",
     "print(f\"rootpath: {rootpath}\")\n",
-    "module_path = os.path.abspath(os.path.join(rootpath, 'src'))\n",
-    "sys.path.insert(0, module_path)\n"
+    "from data import download_stock_price_prediction_challenge_data\n",
+    "# module_path = os.path.abspath(os.path.join(rootpath, 'src'))\n",
+    "# sys.path.insert(0, module_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cacc2c1e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Raw data already found in location /home/onur/WORK/DS/repos/TimeSeries/stocks_forecasting/data/stock-price-prediction-challenge.zip\n",
-      "Raw data already unzipped\n"
-     ]
-    }
-   ],
-   "source": [
-    "def download_stock_price_prediction_challenge_data(rootpath):\n",
-    "    datapath = os.path.join(rootpath, \"data\")\n",
-    "    os.makedirs(datapath, exist_ok=True)\n",
-    "    competition=\"stock-price-prediction-challenge\"\n",
-    "\n",
-    "    os.makedirs(datapath, exist_ok=True)\n",
-    "    zipfpath = os.path.join(datapath, 'stock-price-prediction-challenge.zip')\n",
-    "    if not os.path.exists(zipfpath):\n",
-    "        print(\"Raw data was not found in location {}, downloading\".format(zipfpath))\n",
-    "        kaggle.api.competition_download_cli(competition=competition, path=datapath)\n",
-    "    else:\n",
-    "        print(\"Raw data already found in location {}\".format(zipfpath))\n",
-    "\n",
-    "    # unzip the file\n",
-    "    dirfpath = os.path.join(datapath, 'stock-price-prediction-challenge')\n",
-    "    if not os.path.exists(dirfpath):\n",
-    "        print(\"Unzipping raw data\")\n",
-    "        os.system(f\"unzip {zipfpath} -d {dirfpath}\")\n",
-    "    else:\n",
-    "        print(\"Raw data already unzipped\")\n",
-    "\n",
-    "    return dirfpath\n",
-    "\n",
-    "dirfpath = download_stock_price_prediction_challenge_data(rootpath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "baacc4ac",
    "metadata": {},
    "outputs": [
