--- a/nb/stock-price-prediction-challenge/EDA_Feature_Engineering.ipynb
+++ b/nb/stock-price-prediction-challenge/EDA_Feature_Engineering.ipynb
@@ -5,7 +5,9 @@
    "id": "5e545ced",
    "metadata": {},
    "source": [
-    "# EDA and Feature Engineering"
+    "# EDA and Feature Engineering\n",
+    "\n",
+    "Note: content copied and adapted from the challenge notebook [https://www.kaggle.com/code/nikitamanaenkov/stock-price-prediction-sample/notebook](https://www.kaggle.com/code/nikitamanaenkov/stock-price-prediction-sample/notebook)"
    ]
   },
   {
