--- a/nb/world-stock-prices-daily-updating/exponential_smoothing.ipynb
+++ b/nb/world-stock-prices-daily-updating/exponential_smoothing.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "72b5a879",
    "metadata": {},
    "outputs": [
@@ -46,8 +46,10 @@
     }
    ],
    "source": [
+    "rootpath = os.path.dirname(os.path.dirname(os.getcwd()))\n",
+    "datapath = os.path.join(rootpath, 'data')\n",
     "df_raw = load_raw_data(\n",
-    "    rootpath = os.path.dirname(os.path.dirname(os.getcwd())),\n",
+    "    datapath = os.path.dirname(os.path.dirname(os.getcwd())),\n",
     "    user='nelgiriyewithana',\n",
     "    datasetname='world-stock-prices-daily-updating')\n",
     "df_clean = clean_raw_data(df_raw)\n",
